log_output/manifests/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-deployment
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
            claimName: log-volume-claim
        - name: config
          configMap:
            # Provide the name of the ConfigMap you want to mount.
            name: info-configmap
            # An array of keys from the ConfigMap to create as files
            items:
            - key: "information.txt"
              path: "information.txt"
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      imagePullSecrets:
      - name: gcp-artifact-registry
      containers:
        - name: log-writer
          image: docker.io/iku1/log_output_writer:3.2
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-logs
            mountPath: /tmp/log_output
            subPath: logs
        - name: log-reader-api
          image: docker.io/iku1/log_output_reader_api:5.3.1
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-logs
            mountPath: /tmp/log_output
            subPath: logs
          - name: config
            mountPath: "/config"
            readOnly: true
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            httpGet:
               path: /ready
               port: 5000
