log_output/manifests/istio-greeter-routing.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: greeter-routing
  namespace: exercises
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: greeter-svc
  rules:
  - backendRefs:
    - name: greeter-svc-v1
      port: 80
      weight: 90
    - name: greeter-svc-v2
      port: 80
      weight: 10
